manifests/cors/gateway-cors-2.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: fruits-api
  namespace: my-gloo
spec:
  displayName: FruitsAPI
  virtualHost:
    options:
      cors:
        allowOriginRegex:
          - '^http(s)?:\/\/localhost:[0-9]{4,5}$'
        # Step 2
        # Request header field content-type is not allowed by
        # Access-Control-Allow-Headers in preflight response
        allowHeaders:
          - origin
          - content-type
        maxAge: 1d
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: fruits-app-fruits-api-8080
              namespace: my-gloo
